--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<mat-toolbar color="primary" class="toolbar">
+    <img src="assets/logo.png" alt="Logo" class="logo">
+    <span class="title">My Application</span>
+    <span class="spacer"></span>
+    <button mat-button>Signup</button>
+    <button mat-button>Login</button>
+  </mat-toolbar>
+  
