--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,1 +1,10 @@
-<p>sidebar works!</p>
+<mat-nav-list>
+    <a mat-list-item routerLink="/">Home</a>
+    <a mat-list-item routerLink="/gate-cs">GATE CS</a>
+    <a mat-list-item routerLink="/gate-da">GATE DA</a>
+    <a mat-list-item routerLink="/dsa-python">DSA in Python</a>
+    <a mat-list-item routerLink="/test-series">Free Test Series</a>
+    <a mat-list-item routerLink="/ebooks">Ebooks</a>
+    <a mat-list-item routerLink="/mentorship">Mentorship</a>
+  </mat-nav-list>
+  
