--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,13 @@
 <mat-nav-list>
-    <a mat-list-item routerLink="/">Home</a>
-    <a mat-list-item routerLink="/gate-cs">GATE CS</a>
-    <a mat-list-item routerLink="/gate-da">GATE DA</a>
-    <a mat-list-item routerLink="/dsa-python">DSA in Python</a>
-    <a mat-list-item routerLink="/test-series">Free Test Series</a>
-    <a mat-list-item routerLink="/ebooks">Ebooks</a>
-    <a mat-list-item routerLink="/mentorship">Mentorship</a>
-  </mat-nav-list>
-  
+  <img src="assets/logo.png" alt="Logo" class="logo">
+  <a mat-list-item routerLink="/">Home</a>
+  <a mat-list-item routerLink="/subject-wise-questions">Subject Wise Questions</a>
+  <a mat-list-item routerLink="/topic-wise-questions">Topic Wise Questions</a>
+  <a mat-list-item routerLink="/exam-wise-questions">Exam Wise Questions</a>
+  <a mat-list-item routerLink="/add-question">Add Question</a>
+  <a mat-list-item routerLink="/quiz">Quiz</a>
+  <a mat-list-item routerLink="/users">Users</a>
+  <a mat-list-item routerLink="/quiz/test">Tests</a>
+  <a mat-list-item routerLink="/quiz/questions/test/1">Questions for Test 1</a> <!-- Update testId as needed -->
+  <a mat-list-item routerLink="/quiz/result">Results</a>
+</mat-nav-list>
