--- a/src/app/quiz/components/test-list/test-list.component.html
+++ b/src/app/quiz/components/test-list/test-list.component.html
@@ -1,21 +1,9 @@
-<div class="page-container">
-    <h1 class="page-title">Available Tests</h1>
-    <div class="test-list-container">
-      <ul class="test-list">
-        <li *ngFor="let test of tests" class="test-list-item">
-          <div class="test-info">
-            <h3>{{ test.testName }}</h3>
-            <p *ngIf="test.description">{{ test.description }}</p>
-          </div>
-          <button class="view-test-button" (click)="viewTest(test.id)">View Test</button>
-        </li>
-      </ul>
-      <div class="create-button-container">
-        <button class="create-test-button" (click)="createTest()">
-          <span class="plus-icon">+</span>
-        </button>
-        <span class="create-text">Create New Test</span>
-      </div>
-    </div>
-  </div>
-  
+<div class="test-list">
+  <h2>Available Tests</h2>
+  <ul>
+    <li *ngFor="let test of tests">
+      <span>{{ test.testName }} ({{ test.questions }} questions)</span>
+      <button (click)="startTest(test.id)">Start Test</button>
+    </li>
+  </ul>
+</div>
