--- a/src/app/quiz/components/attempt-quiz/attempt-quiz.component.html
+++ b/src/app/quiz/components/attempt-quiz/attempt-quiz.component.html
@@ -1,14 +1,40 @@
-<h1>Attempt Quiz</h1>
-<p>Time Remaining: {{ timer | date:'mm:ss' }}</p>
-<form (ngSubmit)="submitAnswers()">
-  <div *ngFor="let question of questions">
-    <h3>{{ question.text }}</h3>
-    <div *ngFor="let option of question.options">
-      <label>
-        <!-- <input type="radio" name="question{{ question.id }}" (change)="onOptionSelect(question.id, option.id)" /> -->
-        {{ option.text }}
-      </label>
-    </div>
+<h1 class="quiz-title">Attempt Quiz</h1>
+
+<div class="timer-container">
+  <mat-card class="timer-card">
+    <mat-card-header>
+      <mat-card-title>Time Remaining</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p class="timer-text">{{ timer | date: 'mm:ss' }}</p>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+<form (ngSubmit)="submitAnswers()" class="quiz-form">
+  <mat-card class="quiz-card">
+    <mat-card-header>
+      <mat-card-title>Questions</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <div *ngFor="let question of questions" class="question-container">
+        <h3>{{ question.text }}</h3>
+
+        <mat-radio-group
+          name="question{{ question.id }}"
+          (change)="onOptionSelect(question.id, $event.value)"
+          class="option-group"
+        >
+          <mat-radio-button *ngFor="let option of question.options" [value]="option.id" class="option">
+            {{ option.text }}
+          </mat-radio-button>
+        </mat-radio-group>
+      </div>
+    </mat-card-content>
+  </mat-card>
+
+  <div class="submit-container">
+    <button mat-raised-button color="primary" type="submit">Submit</button>
   </div>
-  <button type="submit">Submit</button>
 </form>
+
