--- a/src/app/quiz/components/question-detail/question-detail.component.html
+++ b/src/app/quiz/components/question-detail/question-detail.component.html
@@ -34,7 +34,8 @@
         <div *ngFor="let option of question.options; let i = index">
           <input [(ngModel)]="option.text" name="optionText{{i}}" placeholder="Option text" />
           <label>
-            <input [(ngModel)]="option.isCorrect" name="isCorrect{{i}}" type="checkbox" /> Correct
+            <input [(ngModel)]="option.isCorrect" name="isCorrect{{i}}" type="checkbox" />
+    {{ option.text }}
           </label>
           <button (click)="removeOption(i)" type="button">Remove</button>
         </div>
