added available test list

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -6,4 +6,5 @@
   <a mat-list-item routerLink="/exam-wise-questions">Exam Wise Questions</a>
   <a mat-list-item routerLink="/add-question">Add Question</a>
   <a mat-list-item routerLink="/test-exam">Create-Test-Exam</a>
+  <a mat-list-item routerLink="/test-list">Available Test</a>
 </mat-nav-list>
