previous change commit

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,7 @@
 <mat-nav-list>
   <img src="assets/logo.png" alt="Logo" class="logo">
   <a mat-list-item routerLink="/">Home</a>
+  <a mat-list-item routerLink="/statistics">statistics</a>
   <a mat-list-item routerLink="/subject-wise-questions">Subject Wise Questions</a>
   <a mat-list-item routerLink="/topic-wise-questions">Topic Wise Questions</a>
   <a mat-list-item routerLink="/exam-wise-questions">Exam Wise Questions</a>
