authentication and interceptor implimented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
       <span class="spacer"></span>
       <button mat-button>Signup</button>
       <button mat-button>Login</button>
+      <button mat-button (click)="logout()">Logout</button>
     </mat-toolbar>
     
     <!-- Main content rendered here -->
