--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="toolbar">
     <span class="title">My Application</span>
     <span class="spacer"></span>
-    <button mat-button>Signup</button>
-    <button mat-button>Login</button>
+    
+    <button mat-button (click)="logout()">Logout</button>
   </mat-toolbar>
   
