--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,11 +1,13 @@
 <mat-nav-list>
   <img src="assets/logo.png" alt="Logo" class="logo">
-  <a mat-list-item routerLink="/">Home</a>
+  <a mat-list-item routerLink="/dashboard">Home</a>
   <a mat-list-item routerLink="/statistics">statistics</a>
   <a mat-list-item routerLink="/subject-wise-questions">Subject Wise Questions</a>
   <a mat-list-item routerLink="/topic-wise-questions">Topic Wise Questions</a>
   <a mat-list-item routerLink="/exam-wise-questions">Exam Wise Questions</a>
   <a mat-list-item routerLink="/add-question">Add Question</a>
   <a mat-list-item routerLink="/test-exam">Create-Test-Exam</a>
-  <a mat-list-item routerLink="/test-list">Available Test</a>
+  <a mat-list-item routerLink="/test-list">Test Series</a>
+  <a mat-list-item routerLink="/test-list">Previous Years Exam</a>
+  <a mat-list-item routerLink="/upload">paper upload to save</a>
 </mat-nav-list>
