--- a/src/app/landing/landing/landing.component.html
+++ b/src/app/landing/landing/landing.component.html
@@ -1,6 +1,6 @@
 <div class="landing-container">
-    <h1>Welcome to My Application</h1>
-    <p>Your gateway to an amazing experience.</p>
+  <img src="assets/logo.png" alt="Logo" class="logo">
+   
   
     <div class="buttons">
       <button mat-button color="primary" (click)="goToLogin()">Login</button>
